[package]
name = "RP2040-OLED-RUST"
version = "0.1.0"
edition = "2021"

[dependencies]
rp2040-hal = "0.7.0"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.1"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.0"
fugit = "0.3.6"

[[bin]]
name = "oled"
path = "src/oled.rs"